# wanted-preonboarding-challenge-backend-20

./: .eslintrc.js  .gitignore  .prettierignore  .prettierrc  API informations.md  API 명세 정리.md  APIDOC.md  APIDOCS.md  DEVELOPMENT.md  Dockerfile  HELP.md  README.md  SUMMARY.md  api.yaml  app.js  app.py  build.gradle  build.gradle.kts  docker-compose.yml  index.html  index.ts  manage.py  nest-cli.json  nodemon.json  package-lock.json  package.json  pom.xml  pyproject.toml  settings.gradle  settings.gradle.kts  tsconfig.json  wanted.eml
__tests__/: app.test.js
api/: build.gradle.kts
challenge/: .gitignore  README.md  build.gradle
db/: dbClient.js  knexfile.js  query.sql  test.sqlite3
delivery_tracker/: __init__.py
demo/: .gitignore  build.gradle
demo1/: build.gradle  settings.gradle
docs/: README.md  index.html
http/: http-client.env.json  member.http  order.http  product.http
instance/: wanted_market.db
market/: .gitignore  asgi.py  build.gradle  settings.gradle  settings.py  urls.py  wsgi.py
middlewares/: auth.js  dbErrorHandler.js  transactionHandler.js
model/: basicDao.js  orderDao.js  productDao.js  userDao.js
order/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
prisma/: schema.prisma
routes/: index.js  order.js  orders.js  product.js  products.js  token.js  user.js  users.js
scripts/: utils.ts
services/: orderService.js  productService.js  tokenService.js  userService.js
src/: app.const.ts  app.module.ts  app.ts  database.ts  main.ts  task-queue.ts  요구사항.md
tests/: transaction.test.ts  utils.ts
(+2859 files in other folders)
